--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<!-- <button id="displayModeBtn">Display Mode</button> -->
 			<select>
 				<option value="">Preset...</option>
-				<option value="https://tinyurl.com/5apm7ywd">Svikt and stomp</option>
+				<option value="https://tinyurl.com/ymfufhe2">KMH_F2</option>
 				<option value="https://tinyurl.com/yc7v3fdj">Svikt-speed and stomp</option>
 				<option value="https://tinyurl.com/7mrsw3rh">Feet Speed Wind</option>
 				<option value="https://tinyurl.com/3tc9kp5b">Svikt Harmonics</option>
