--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<select>
 				<option value="">Preset...</option>
 				<option value="https://tinyurl.com/ymfufhe2">KMH_F2</option>
-				<option value="https://tinyurl.com/yc7v3fdj">Svikt-speed and stomp</option>
+				<option value="https://tinyurl.com/423z9r5m">IDP37>
 				<option value="https://tinyurl.com/7mrsw3rh">Feet Speed Wind</option>
 				<option value="https://tinyurl.com/3tc9kp5b">Svikt Harmonics</option>
 			</select>
