--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<option value="">Preset...</option>
 				<option value="https://tinyurl.com/ymfufhe2">KMH_F2</option>
 				<option value="https://tinyurl.com/423z9r5m">IDP37>
-				<option value="https://tinyurl.com/7mrsw3rh">Feet Speed Wind</option>
+				<option value="https://tinyurl.com/mt5wzh7z">IDP34</option>
 				<option value="https://tinyurl.com/3tc9kp5b">Svikt Harmonics</option>
 			</select>
 
