--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			<select>
 				<option value="">Preset...</option>
 				<option value="https://tinyurl.com/ymfufhe2">KMH_F2</option>
-				<option value="https://tinyurl.com/423z9r5m">IDP37>
-				<option value="https://tinyurl.com/mt5wzh7z">IDP34</option>
-				<option value="https://tinyurl.com/yyn2apb3">IDP33</option>
+				<option value="https://tinyurl.com/s5jxzkjr">IDP37</option>
+				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
+				<option value="https://tinyurl.com/mrvu8esh">IDP33</option>
 			</select>
 
 
