--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<option value="https://tinyurl.com/s5jxzkjr">IDP37</option>
 				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
 				<option value="https://tinyurl.com/mrvu8esh">IDP33</option>
+				<option value="https://tinyurl.com/2y6s2cru">Preset:Feetwind</option>
 			</select>
 
 
