--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 				<option value="https://tinyurl.com/s5jxzkjr">IDP37</option>
 				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
 				<option value="https://tinyurl.com/mrvu8esh">IDP33</option>
-				<option value="https://tinyurl.com/2y6s2cru">Preset:Feetwind</option>
+				<option value="https://tinyurl.com/2y6s2cru">Preset:FeetWind</option>
+				<option value="https://tinyurl.com/yjvzek3x">Preset:SviktandStomp</option>
+				<option value="https://tinyurl.com/2y6s2cru">XXX</option>
+				<option value="https://tinyurl.com/2y6s2cru">XXX</option>
 			</select>
 
 
