--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
 				<option value="https://tinyurl.com/mrvu8esh">IDP33</option>
 				<option value="https://tinyurl.com/2y6s2cru">Preset:FeetWind</option>
-				<option value="https://tinyurl.com/yjvzek3x">Preset:SviktandStomp</option>
+				<option value="https://tinyurl.com/4zp89yya">Preset:SviktandStomp</option>
 				<option value="https://tinyurl.com/2y6s2cru">XXX</option>
 				<option value="https://tinyurl.com/2y6s2cru">XXX</option>
 			</select>
