--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 				<option value="https://tinyurl.com/s5jxzkjr">IDP37</option>
 				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
 				<option value="https://tinyurl.com/mrvu8esh">IDP33</option>
-				<option value="https://tinyurl.com/2y6s2cru">Preset:FeetWind</option>
-				<option value="https://tinyurl.com/4zp89yya">Preset:SviktandStomp</option>
-				<option value="https://tinyurl.com/4mz34u5r">Preset:DroneHarmonics</option>
+				<option value="https://tinyurl.com/3zndvenk">AudioEx1:MicroTonals</option>
+				<option value="https://tinyurl.com/4mz34u5r">AudioEx2:FiddleHarmonics</option>
+				<option value="https://tinyurl.com/4zp89yya">AudioEx3:SviktandStompPerc</option>
+				<option value="https://tinyurl.com/2y6s2cru">AudioEx4:WindyFeetNoise</option>
 				<option value="https://tinyurl.com/57t83mze">Preset:MixedGroove</option>
-				<option value="https://tinyurl.com/7hey3hke">Preset:Quartertone</option>	
 			</select>
 
 
