--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 			<!-- <button id="displayModeBtn">Display Mode</button> -->
 			<select>
 				<option value="">Preset...</option>
+				<option value="https://tinyurl.com/39e4zykc">Welcome:MixedGroove</option>
 				<option value="https://tinyurl.com/3zndvenk">AudioEx1:MicroTonals</option>
 				<option value="https://tinyurl.com/4mz34u5r">AudioEx2:FiddleHarmonics</option>
 				<option value="https://tinyurl.com/4zp89yya">AudioEx3:SviktandStompPerc</option>
 				<option value="https://tinyurl.com/2y6s2cru">AudioEx4:WindyFeetNoise</option>
-				<option value="https://tinyurl.com/yc6bhyj6">Preset:MixedGroove</option>
 				<option value="https://tinyurl.com/ymfufhe2">KMH_F2</option>
 				<option value="https://tinyurl.com/s5jxzkjr">IDP37</option>
 				<option value="https://tinyurl.com/2p8mutdv">IDP34</option>
