--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<!-- <button id="displayModeBtn">Display Mode</button> -->
 			<select>
 				<option value="">Preset...</option>
-				<option value="https://tinyurl.com/39e4zykc">Welcome - MixedGroove</option>
+				<option value="https://omisgeld.github.io/SonifyFOLKSMC2023/">Welcome - MixedGroove</option>
 				<option value="https://tinyurl.com/yc6tsvus">AudioEx1:MicroTonals</option>
 				<option value="https://tinyurl.com/4mz34u5r">AudioEx2:FiddleHarmonics</option>
 				<option value="https://tinyurl.com/4zp89yya">AudioEx3:SviktandStomp</option>
